--- a/css/main.css
+++ b/css/main.css
@@ -808,13 +808,13 @@ li a:hover {
     justify-content: space-between;
     flex-flow: row wrap;  
     align-items: center;
-    margin: 4% 2% 2% 2%;
+    margin: 2%;
 }
 
 #diagrams-img figure {
     width: 100%;
     align-items: center; 
-    margin-top: 4%;
+    margin-top: 1em;
    
 }
 
