--- a/css/main.css
+++ b/css/main.css
@@ -1322,6 +1322,7 @@ nav li {
     nav li {
     padding: 11px;
     font-size: 0.7rem;
+        line-height: 0.6;
 
 }
 
@@ -1360,13 +1361,7 @@ nav li {
 
 }
 
-@media screen and (max-width: 600px) {
-  
-    
-   
 
-
-}
     
 
 
