--- a/css/main.css
+++ b/css/main.css
@@ -669,7 +669,6 @@ li a:hover {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    background-color: #F2F4F4;
     margin-top: 2%;
 }
 
@@ -723,6 +722,19 @@ li a:hover {
     -ms-transition:transform 0.5s ease-in-out;
     
 }
+
+#background {
+    position: absolute;
+    z-index: -1;
+    top: inherit;
+    left: 0;
+    right: 0;
+    bottom: inherit;
+    width: 100%;
+    height: 100%;
+    background-color: #EDECEA;  
+}
+
 
 /*skills section*/
 
@@ -1320,10 +1332,8 @@ nav li {
     /*header*/
     
     nav li {
-    padding: 11px;
+    padding: 0.5em;
     font-size: 0.7rem;
-        line-height: 0.6;
-
 }
 
     
@@ -1356,8 +1366,6 @@ nav li {
     margin-left: 80%;
 }
     
-   
-
 
 }
 
