--- a/css/main.css
+++ b/css/main.css
@@ -686,6 +686,7 @@ li a:hover {
 
 #about h2 {
   margin-bottom: 1.2rem;
+    color: 
 }
 
 #about article div {
@@ -703,13 +704,15 @@ li a:hover {
 #about p {
     text-align: center;
     font-size: 0.95rem;
+    color: black;
+    font-weight:500;
     
 }
 
 
 
 #about a {
-    color: white;
+    color: black;
     cursor: pointer;
     font-size: 1.1rem;
 }
@@ -732,6 +735,8 @@ li a:hover {
 }
 
 #background {
+    background: url('../img/london.jpg') center no-repeat #EDECEA;
+    background-size: cover;
     position: absolute;
     z-index: -1;
     top: inherit;
@@ -739,8 +744,7 @@ li a:hover {
     right: 0;
     bottom: inherit;
     width: 100%;
-    height: 100%;
-    background-color: #EDECEA;  
+    height: 100%; 
 }
 
 
