--- a/css/main.css
+++ b/css/main.css
@@ -717,6 +717,10 @@ li a:hover {
     font-size: 1.1rem;
 }
 
+#about button {
+    box-shadow: 0px 12px 18px -6px rgba(115,206,192,0.3);
+}
+
 
 #about a:hover {
     text-decoration: none;
@@ -1376,6 +1380,12 @@ nav li {
  .design {
     margin-top: 20vh;
     margin-left: 80%;
+}
+    
+    /*about section*/
+    
+    #background {
+   padding-bottom: 30%;
 }
     
 
