--- a/css/main.css
+++ b/css/main.css
@@ -739,7 +739,7 @@ li a:hover {
 }
 
 #background {
-    background: url('../img/london.jpg') center no-repeat #EDECEA;
+    background: url('../img/london.png') center no-repeat #EDECEA;
     background-size: cover;
     position: absolute;
     z-index: -1;
@@ -749,7 +749,9 @@ li a:hover {
     bottom: inherit;
     width: 100%;
     height: 100%; 
+    margin: 0;
 }
+
 
 
 /*skills section*/
@@ -1382,13 +1384,7 @@ nav li {
     margin-left: 80%;
 }
     
-    /*about section*/
-    
-    #background {
-   padding-bottom: 100%;
-    margin: 0;
-}
-    
+
 
 }
 
