--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ img {
 
 nav { 
     background-color: white;
-    width: 94%;
+    width: 95%;
     margin: auto;
     margin-top: 2%;
 }
@@ -182,7 +182,7 @@ nav {
     float: right;
     text-align: right;
     width: 9%;
-    margin-right: 1%;
+    padding-right: 1%;
 }
 
 
