--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,6 @@ h2, h3, h4, h5 {
 p {
     color: #4B4C4C;
     -webkit-font-smoothing: antialiased;
-    font-size: 1.1em;
 }
 
 a {
@@ -634,6 +633,10 @@ li a:hover {
     padding-bottom: 4%;
 }
 
+.project-description em {
+    font-size: 0.9em;
+}
+
 #portfolio a {
     text-decoration: none;
     color: white;
@@ -720,7 +723,7 @@ li a:hover {
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
     font-size: 1.1em;
-
+    line-height: 2;
 }
 
 
@@ -1160,6 +1163,12 @@ label {
 @media only screen and (min-width: 768px) {
     /* Tablet styles here */
     
+    
+p {
+    
+    font-size: 1.1em;
+}
+    
  nav li {
 
     line-height: 1;
@@ -1257,6 +1266,13 @@ label {
 }
 @media only screen and (min-width: 1200px) {
     /* Desktop styles here */
+    
+
+p {
+    
+    font-size: 1.1em;
+}
+    
     
     
 nav li {
