--- a/css/main.css
+++ b/css/main.css
@@ -717,10 +717,9 @@ li a:hover {
 
 #about p {
     text-align: center;
-    font-size: 0.95rem;
-    font-weight:400;
+    font-weight:500;
     color: black;
-    background-color: rgba(255,255,255,0.5);
+    background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 70%, rgba(255, 255, 255, 0.6) 100%);
     padding: 0.6rem;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
@@ -737,7 +736,6 @@ li a:hover {
 }
 
 #about .button {
-
     box-shadow: 0px 2px 0px #3F6560, 0px 1px 6px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.3), inset 0px 0px 3px rgba(255,255,255,.5);
     box-shadow: 0px 4px 0px #3F6560;
     box-shadow: 0px 3px 0px #3F6560, 0px 4px 15px rgba(0,0,0,.4);
@@ -867,9 +865,13 @@ li a:hover {
 /*---------------------diagrams------------------------*/
 
 #diagrams {
-    background-color: #EDECEA;
+    background-color: #EEEEEE;
     padding: 3%;
     
+}
+
+#diagrams h2 {
+    padding: 3% 0;
 }
 
 #diagrams-img {
@@ -883,7 +885,7 @@ li a:hover {
 #diagrams-img figure {
     width: 100%;
     align-items: center; 
-    margin-top: 1em;
+    margin-top: 5%;
    
 }
 
@@ -1085,7 +1087,7 @@ label {
     transform: translate(0px, -25px);
 }
 
-#wrapper {
+.wrapper {
     position: relative;
     padding: 5px 0;
 
@@ -1251,6 +1253,7 @@ p {
     
     #diagrams-img figure {
     width: 45%;
+    margin-top: 2%;
     }
 
 
@@ -1363,6 +1366,7 @@ nav li {
     
     #diagrams-img figure {
     width: 45%;
+    margin-top: 2%;
     }
     
 
