--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,7 @@ nav {
 #menu {
     float: right;
     text-align: right;
-    width: 9%;
+    width: 8%;
     padding-right: 1%;
 }
 
@@ -189,9 +189,9 @@ nav {
 nav li {
     box-sizing: border-box;
     display: inline-block;
-    padding: 11px;
+    padding: 10px;
     z-index: 1;
-    line-height: 1;
+    line-height: 0.8;
     font-size: 1em;
     background-color: white;
     cursor: pointer;
@@ -246,7 +246,7 @@ li a:hover {
 
 #menu-dropdown-content {
     font-family: 'Open Sans Condensed', sans-serif;
-    font-weight: 800;
+    font-weight: 700;
 }
 
 #lang-dropdown-content {
@@ -355,8 +355,8 @@ li a:hover {
 #name h1 {
     font-weight: bolder;
     font-size: 8.8vw;
-    line-height: 0.3;
     text-align: center;
+    line-height: 0.5;
 }
 
 #name h1 span {
@@ -365,24 +365,19 @@ li a:hover {
 }
 
 #name div {
-    padding-top: 3%;
+    padding-top: 2%;
 
 }
 
 #title h1 {
     font-size: 3.5vw;
-    line-height: 1;
+    line-height: 0.8;
     color:#4B4C4C;
     text-align: center;
     width: 100%;
-    margin-bottom: 3%;
+    margin-bottom: 8px;
     text-align: center;
 }
-
-#title {
-    padding-top: 1.2rem;
-}
-
 
 
 
@@ -1208,6 +1203,18 @@ p {
 .container {
         margin-bottom: 0;
 }
+ 
+    
+/*name*/
+    
+#name h1{
+    margin-bottom: 12px;    
+}
+    
+#title h1 {
+        margin-bottom: 0.8em;
+}
+    
     
 
 /*portfolio*/
@@ -1315,13 +1322,17 @@ nav li {
         margin-bottom: 0;
 }
     
-/*name
+/*name*/
     
-    #name {
-        margin-bottom: 3rem;
-    }
+#name h1 {
+    margin-bottom: 14px;    
+}
     
- */
+ #title h1 {
+    margin-bottom: 0.8em;
+}
+    
+ 
     
  .project-description {
         width: 45%;
