changed font size menu and decreased vh for the main section for iphones landscape

--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,6 @@ h2, h3, h4, h5 {
 
 p {
     color: #4B4C4C;
-    font-smooth: auto;
     -webkit-font-smoothing: antialiased;
 
 }
@@ -257,7 +256,7 @@ li a:hover {
     display: none;
     top: 100%;
     overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
+    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);*/
   
 }
 
@@ -1266,8 +1265,9 @@ p {
   
 }
     
-.container {
-        margin-bottom: 0;
+#menu-dropdown-content {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
 }
  
     
@@ -1384,8 +1384,9 @@ nav li {
     font-size: 1.1em;
 }
     
-.container {
-        margin-bottom: 0;
+#menu-dropdown-content {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
 }
     
 /*name*/
@@ -1531,6 +1532,26 @@ nav li {
 
 }
 }
+    
+    /*--------for phones lanscape orientation-----*/
+    
+    @media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) 
+and (orientation : landscape) { 
+    
+     .max-container {
+    max-height: 60vh;
+}
+    
+    
+    
+    
+    
+    
+    
+    }
+
 
 
     
