--- a/css/main.css
+++ b/css/main.css
@@ -370,7 +370,7 @@ li a:hover {
 /*---------------------------name section------------------------*/
 
 
-#name h1 {
+#name h2 {
     font-weight: bolder;
     font-size: 8.8vw;
     /*text-align: center;*/
@@ -379,7 +379,7 @@ li a:hover {
 
 }
 
-#name h1 span {
+#name h2 span {
     color: #73CEC0;
     /*text-align: center;*/
 }
@@ -440,92 +440,92 @@ li a:hover {
 }
 
 .star-1 {
-    margin-top: 5%;
+    margin-top: 1%;
     margin-left: 20%;
     animation-duration: 0.9s;
     animation-name: twinkle;
 }
 
 .star-2 {
-    margin-top: 9.5%;
+    margin-top: 5.5%;
     margin-left: 9.5%;
     animation-duration: 1.1s;
     animation-name: twinkle;
 }
 
 .star-3 {
-    margin-top: 11%;
+    margin-top: 7%;
     margin-left: 20%;
     animation-duration: 1s;
     animation-name: twinkle;
 }
 
 .star-4 {
-    margin-top: 11.7%;
+    margin-top: 7%;
     margin-left: 32.3%;
     animation-duration: 1.2s;
     animation-name: twinkle;
 }
 
 .star-5 {
-    margin-top: 7%;
+    margin-top: 3%;
     margin-left: 5%;
     animation-duration: 1.2s;
     animation-name: twinkle;
 }
 
 .star-6 {
-    margin-top: 0.5%;
+    margin-top: 0;
     margin-left: 10%;
     animation-duration: 1.2s;
     animation-name: twinkle;
 }
 
 .star-7 {
-    margin-top: 0.5%;
+    margin-top: 0;
     margin-left: 30%;
     animation-duration: 1.2s;
     animation-name: twinkle;
 }
 
 .star-8 {
-    margin-top: 5%;
+    margin-top: 1%;
     margin-left: 80%;
     height: 2px;
     width: 2px;
 }
 
 .star-9 {
-    margin-top: 10%;
+    margin-top: 6%;
     margin-left: 90%;
     height: 3px;
     width: 3px;
 }
 
 .star-10 {
-    margin-top: 11%;
+    margin-top: 7%;
     margin-left: 80%;
     height: 4px;
     width: 4px;
 }
 
 .star-11 {
-    margin-top: 12%;
+    margin-top: 8%;
     margin-left: 65%;
 }
 
 .star-12 {
-    margin-top: 7%;
+    margin-top: 3%;
     margin-left: 95%;
 }
 
 .star-13 {
-    margin-top: 0.5%;
+    margin-top: 0;
     margin-left: 90%;
 }
 
 .star-14 {
-    margin-top: 0.5%;
+    margin-top: 0;
     margin-left: 68%;
 }
 
@@ -575,7 +575,7 @@ li a:hover {
     position: absolute;
     bottom: 0;
     /*height: auto;*/
-    max-height: 64vh;
+    max-height: 62vh;
     display: block;
     left:0;
     right:0;
@@ -587,7 +587,7 @@ li a:hover {
 .design {
     position: absolute;
     font-size: 4.5vw;
-    margin-top: 30vh;
+    margin-top: 20vh;
     margin-left: 80%;
 
 }
@@ -608,7 +608,7 @@ li a:hover {
 .code {
     position: absolute;
     font-size: 4.5vw;
-    margin-top: 31.5vh;
+    margin-top: 21.5vh;
     margin-left: 5.5%;
     font-weight: bolder;
     font-family: Orbitron, courier;
@@ -1280,6 +1280,7 @@ p {
 #title h1 {
         margin-bottom: 0.5em;
 }
+
     
     
 
@@ -1536,28 +1537,98 @@ nav li {
     /*--------for phones lanscape orientation-----*/
     
     @media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 667px) 
+
+and (max-device-width : 767px) 
 and (orientation : landscape) { 
     
      .max-container {
-    max-height: 65vh;
+    max-height: 84vh;
 }
     
     #face img {
-    height: inherit;
-    max-height: 50vh;
+    max-height: 53vh;
 }
     
+}
+ 
+
+/*ipad landscape*/
+
+ @media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) { 
     
+     .max-container {
+    max-height: 91vh;
+}
     
-    
-    
-    
+    #face img {
+    height: 65vh;
+}
     
     }
 
 
+/*ipad pro landscape*/
+
+
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+      
+      
+    .max-container {
+    max-height: 91vh;
+      }
+    
+    #face img {
+    height: 80vh;
+      }
+      
+      #name h2 {
+    font-size:10vw;
+            margin-top: 3%;
+
+      }
+
+
+#title h1 {
+    font-size: 4vw;
+   
+      }
+      
+}
+   
+
+/*ipad pro portrait*/
+      @media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+      
+      .max-container {
+    max-height: 52vh;
+      }
+    
+    #face img {
+    height: 50vh;
+      }
+      
+      #name h2 {
+    font-size:10vw;
+  
+      }
+
+#title h1 {
+    font-size: 4vw;
+      
+      }
+
+}
 
     
 
