--- a/css/main.css
+++ b/css/main.css
@@ -401,7 +401,7 @@ li a:hover {
     display: flex;
     justify-content: center;
     text-align: center;
-    padding-bottom: 2px;
+
     
 }
 
@@ -410,7 +410,7 @@ li a:hover {
     display: flex;
     justify-content: center;
     text-align: center;
-    padding-bottom: 1em;
+
 }
 
 
@@ -1290,12 +1290,12 @@ p {
     
 /*name*/
     
-#name h1{
-    margin-bottom: 12px;    
+#name h2{
+    margin-bottom: 15px;    
 }
     
 #title h1 {
-        margin-bottom: 0.5em;
+    padding-bottom: 0.8em;
 }
 
     
@@ -1405,12 +1405,12 @@ nav li {
     
 /*name*/
     
-#name h1 {
-    margin-bottom: 14px;    
+#name h2 {
+    margin-bottom: 15px;    
 }
     
  #title h1 {
-    margin-bottom: 0.5em;
+    padding-bottom: 0.8em;
 }
     
  
@@ -1506,11 +1506,10 @@ nav li {
 
     
  .max-container {
-    max-height: 50vh;
+    max-height: 55vh;
 }
     
  #face img {
-    height: inherit;
     max-height: 35vh;
 }
 
@@ -1530,11 +1529,11 @@ nav li {
 }
     
  .design {
-    margin-top: 19.5vh;
+    margin-top: 19.7vh;
     margin-left: 80%;
 }
     
-    .design p {
+ .design p {
         margin-top: 1%;
         line-height: 1.2;
     }
@@ -1579,6 +1578,14 @@ and (orientation : landscape) {
     #face img {
     height: 65vh;
 }
+    
+    .design {
+        margin-top: 19.5vh;
+    }
+    
+    .code {
+        margin-top: 
+    }
     
     }
 
