--- a/css/main.css
+++ b/css/main.css
@@ -1016,6 +1016,9 @@ li a:hover {
     list-style: none;
     text-align: center;
     margin: 20px 0;
+}
+
+#contact li {
     color: #343434;
 }
 
