--- a/css/main.css
+++ b/css/main.css
@@ -1018,8 +1018,9 @@ li a:hover {
     margin: 20px 0;
 }
 
-#contact li {
-    color: #343434;
+a[href^=tel] {
+    color: inherit;
+    text-decoration: none;
 }
 
 #contact-form h5 {
