--- a/css/main.css
+++ b/css/main.css
@@ -542,23 +542,28 @@ li a:hover {
 .design {
     position: absolute;
     font-size: 4.5vw;
-    right: 4%;
-    bottom: 8%;
+    right: 3.5%;
+    bottom: 10%;
 
 }
 
 .design strong {
     color: white;
     font-size: 3em;
+    font-weight: bolder;
 }
 
 
 .design p {
-    font-size: 1.2vw;
+    font-size: 1.3vw;
     color: black;
-    font-weight: 400;
+    /*font-weight: 700;*/
     line-height: 1.2;
     text-align: center;
+    /*font-family: Lato, sans-serif;*/
+    
+    /*font-family: 'GoMonoRegular';*/
+    font-family: 'Nova Mono', monospace;
 }
 
 
@@ -566,21 +571,26 @@ li a:hover {
 .code {
     position: absolute;
     font-size: 4.5vw;
-    bottom: 7%;
-    left: 4%;
+    bottom: 10%;
+    left: 3.5%;
     font-weight: bolder;
-    font-family: Orbitron, courier;
+    /*font-family: Orbitron, courier;*/
+    /*font-family: 'Roboto Mono', monospace;*/
+    /*font-family: 'Ubuntu Mono', monospace;*/
+    font-family: 'Share Tech Mono', monospace;
+    
 }
 
 .code strong {
     color: black;
     font-size: 3em;
+    font-weight: bolder;
   
 
 }
 
 .code p {
-    font-size: 1.1vw;
+    font-size: 1.3vw;
     color: white;
     text-align: center;
     line-height: 1.2;
@@ -589,9 +599,9 @@ li a:hover {
 }
 
 .code span {
-    font-size: 1vw;
+    font-size: 0.8em;
     color: black;
-    font-family: 'Open Sans Condensed', sans-serif;
+    /*font-family: 'Open Sans Condensed', sans-serif;*/
 }
 
 .code fa {
@@ -1441,10 +1451,10 @@ nav li {
     
     /*header*/
     
-    nav li {
+   /* nav li {
     padding: 0.7em;
     font-size: 0.9em;
-}
+}*/
 
     
  .max-container {
@@ -1456,23 +1466,23 @@ nav li {
 }
 
 .code {
-    bottom: 30%;
+    bottom: 28%;
 }
 
 
 
-.code span {
+/*.code span {
     font-size: 1vw;
-}
+}*/
     
  .design {
-    bottom: 30%;
+    bottom: 28%;
 }
     
- .design p {
+ /*.design p {
         margin-top: 1%;
         line-height: 1.2;
-    }
+    }*/
 
 .stars {
    
@@ -1564,9 +1574,6 @@ and (orientation : landscape) {
 .max-container {max-height: 82vh;}
 
 #face img {height: 47vh;}
-
-
-.design p {line-height: 1.1;}*/
        
     
 }
@@ -1579,9 +1586,11 @@ and (max-device-width : 812px)
 and (-webkit-device-pixel-ratio : 3)
 and (orientation : portrait) { 
     
-    .design {bottom: 45%;}
+    .design {bottom: 40%;}
     
-    .code {bottom: 45%;}
+    .code {bottom: 40%;}
+    
+    .code strong {color: #73cec0;}
      
     
 }
